# Lumina

./: .gitignore  GEMINI.md  PRD.md  README.md
.agents/stateless-engineering-agent/: SKILL.md
.agents/stateless-engineering-agent/assets/: API_REGISTRY.md.template  ROADMAP.md.template  STATE.md.template  task_N.md.template
.cursor/skills/task-architect/: SKILL.md  templates.md
client/: project.godot
client/scenes/: main.tscn
client/scripts/: main.gd  main.gd.uid  window_manager.gd  window_manager.gd.uid  ws_client.gd  ws_client.gd.uid
client/scripts/pet/: pet_controller.gd  pet_controller.gd.uid  (+4 more)
docs/design/: changelog.md  master_overview.md
server/: .gitignore  config.example.yaml  config.yaml  pyproject.toml
server/lumina/: __main__.py  config.py
server/lumina/agent/: core.py  llm_client.py  react_loop.py
server/lumina/tools/: __init__.py  app_tools.py  base.py  file_tools.py  interaction_tools.py  registry.py  system_tools.py  vision_tools.py
server/lumina/vision/: ai_visual.py  capture.py  coordinates.py  interaction.py  ocr.py  perceiver.py  ui_automation.py  window_info.py
server/lumina/ws/: protocol.py  server.py
server/src/lumina/: __init__.py  main.py
server/src/lumina/agent/: __init__.py
server/src/lumina/config/: __init__.py
server/src/lumina/llm/: __init__.py
server/src/lumina/tools/: __init__.py
server/src/lumina/vision/: __init__.py
server/src/lumina/ws/: __init__.py
server/tests/: conftest.py  manual_agent_test.py  manual_pet_test.py  test_agent.py  test_interaction.py  test_tools.py  test_vision.py  test_ws.py
(+46 files in other folders)
